# Vehicle_Routing

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh
data/: data.md  data.py  require.xlsx  road_new.xlsx
docs/: Algorithm_Introduction.md  Problem_description.txt  data.md  data.py  edit.txt  论文算法介绍.md  问题描述.docx
graph/: visualize.py  visualize.sh
include/: common.h  dynamic_genetic.h  genetic_algorithm.h  path_optimizer.h  path_validator.h  solver.h  static_genetic.h  task_assigner.h
src/: common.cpp  dynamic_genetic.cpp  genetic_algorithm.cpp  main.cpp  path_optimizer.cpp  path_validator.cpp  solver.cpp  static_genetic.cpp  task_assigner.cpp
test/: output_data_weighted.txt
